--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/myresume.css" rel="stylesheet" />
-
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -35,6 +34,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#friends">Friends</a></li>
                 </ul>
             </div>
         </nav>
@@ -226,6 +226,26 @@
                     </ul>
                 </div>
             </section>
+                        
+        <hr class="m-0 />               
+            <!--Interests-->            
+        <section class=="resume-section" id="friends">                
+               <div class="resume-section-content">
+               <h2 class="mb-5">Friends</h2>                                   
+               <ul class="fa-ul mb-0">  
+                  <li><a href=http://phoebe162.github.io/">張勻瑄</a><li>                   
+              <li><a href=http://sdo0204.github.io/">林長薇                        
+              <li><a href=http://jz1570.github.io/">呂佳臻                       
+              <li><a href=http://kahyeee.github.io/">林家卉                 
+              <li><a href=http://chiaoni.github.io/">陳巧倪       
+              <li><a href=http://z26453986.github.io/">楊育嫻       
+              <li><a href=http://yu0628.github.io/">許瑜真       
+              <li><a href=http://ruofang-819.github.io/">王若舫       
+              <li><a href=http://chieh1021.github.io/">張雅絜        
+            </ul>         
+             </div> 
+        </section>    
+                  
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
