--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
                 </div>
             </section>
                         
-        <hr class="m-0 />               
-            <!--Interests-->            
-        <section class=="resume-section" id="friends">                
-               <div class="resume-section-content">
-               <h2 class="mb-5">Friends</h2>                                   
-               <ul class="fa-ul mb-0">  
+        <hr class="m-0" />
+            <!-- Interests-->
+            <section class="resume-section" id="friends">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Friends</h2>                              
+                <ul class="fa-ul mb-0">
                   <li><a href=http://phoebe162.github.io/">張勻瑄</a><li>                   
               <li><a href=http://sdo0204.github.io/">林長薇                        
               <li><a href=http://jz1570.github.io/">呂佳臻                       
