--- a/index.html
+++ b/index.html
@@ -234,14 +234,14 @@
                     <h2 class="mb-5">Friends</h2>                              
                 <ul class="fa-ul mb-0">
                   <li><a href=http://phoebe162.github.io/">張勻瑄</a><li>                   
-              <li><a href=http://sdo0204.github.io/">林長薇                        
-              <li><a href=http://jz1570.github.io/">呂佳臻                       
-              <li><a href=http://kahyeee.github.io/">林家卉                 
-              <li><a href=http://chiaoni.github.io/">陳巧倪       
-              <li><a href=http://z26453986.github.io/">楊育嫻       
-              <li><a href=http://yu0628.github.io/">許瑜真       
-              <li><a href=http://ruofang-819.github.io/">王若舫       
-              <li><a href=http://chieh1021.github.io/">張雅絜        
+              <li><a href=http://sdo0204.github.io/">林長薇</a><li>                         
+              <li><a href=http://jz1570.github.io/">呂佳臻</a><li>                        
+              <li><a href=http://kahyeee.github.io/">林家卉</a><li>                  
+              <li><a href=http://chiaoni.github.io/">陳巧倪 </a><li>       
+              <li><a href=http://z26453986.github.io/">楊育嫻</a><li>        
+              <li><a href=http://yu0628.github.io/">許瑜真</a><li>        
+              <li><a href=http://ruofang-819.github.io/">王若舫</a><li>        
+              <li><a href=http://chieh1021.github.io/">張雅絜</a><li>         
             </ul>         
              </div> 
         </section>    
