--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               <li><a href="https://sdo0204.github.io/">林長薇</a><li>                         
               <li><a href="https://jz1570.github.io/">呂佳臻</a><li>                        
               <li><a href="https://kahyeee.github.io/">林家卉</a><li>                  
-              <li><a href="https://chiaoni.github.io/">陳巧倪 </a><li>       
+              <li><a href="https://chiaoni-26.github.io/">陳巧倪 </a><li>       
               <li><a href="https://z26453986.github.io/">楊育嫻</a><li>        
               <li><a href="https://yu0628.github.io/">許瑜真</a><li>        
               <li><a href="https://ruofang-819.github.io/">王若舫</a><li>        
