--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>我的興趣是唱歌以及跳舞，偶爾花些時間聽聽個看看電影或追追劇也是我平時生活的興趣之一，又或者花些時間出外走走看看世界。</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p class="mb-0"></p>
                 </div>
             </section>
             <hr class="m-0" />
