--- a/index.html
+++ b/index.html
@@ -178,7 +178,11 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>我的興趣是唱歌以及跳舞，偶爾花些時間聽聽個看看電影或追追劇也是我平時生活的興趣之一，又或者花些時間出外走走看看世界。</p>
                     <p class="mb-0">My hobbies are singing and dancing. Occasionally spending some time to watch movies or chasing dramas is also one of my usual interests in life, or spending some time out to see the world.</p>
-                </div>
+                    <ul class="list-inline dev-icons">
+					<li class="list-inline-item"><i class="fas fa-microphone-stand"></i></li>
+                    <li class="list-inline-item"><i class="fas fa-camera-movie"></i></li>
+					<li class="list-inline-item"><i class="fas fa-route"></i></li>
+			   </div>
             </section>
             <hr class="m-0" />
             <!-- Awards-->
